app/assets/stylesheets/modules/shared/email_status.scss
.m-shared-email_status {
  strong {
    text-transform: uppercase;
  }

  table#status-container-detail {
    background-color: #fff;
    padding: 15px;

    table.approval-details {
      padding-top: 25px;
    }
  }

  .status-header-container {
    &.cancelled td {
      border: 0px;
    }
    td {
      border-bottom: 1px solid #ccc;
      padding-bottom: 20px;

      &:last-child {
        text-align: right;
      }

      .status-icon {
        padding-bottom: 5px;
      }
    }

    &.status-header {
      strong {
        padding: 0 3px;
      }
    }
  }

  .status-icon {
    position: relative;
    padding-bottom: 35px;
  }

  .approval-row > td {
    vertical-align: top;
    padding: 0 60px 0 0;

    &.last {
      img.approved.linear, img.pending.linear {
        background-image: none;
      }

      img {
        padding-top: 0;
      }
    }

    &.first {
      padding: 0;

      img {
        padding-top: 0;
      }
    }

    img {
      float: left;
    }

    .approver {
      padding-left: 7px;
      position: relative;
      top: -5px;
    }
  }
}

